//
//  Identifiers.swift
//  Challenge
//
//  Created by Carlos Mario Munoz Perez on 20/10/22.
//

import Foundation

public enum Identifiers {

    static let detailFavoriteButton = "detail_favorite_button"
    static let moviesCollection = "movies_collection"
    static let cellFavoriteImageView = "cell_favorite_image_view"
    static let loadingIndicatorView = "loading_indicator_view"
    static let favoritesTable = "favorite_table_view"
}
